--- a/package.json
+++ b/package.json
@@ -5,28 +5,28 @@
     "main": "dist/index.js",
     "private": true,
     "scripts": {
-      "build": "ncc build src/main.js"
+        "build": "ncc build src/main.js"
     },
     "repository": {
-      "type": "git",
-      "url": "git+ssh://git@github.com:roy-ca/register-artifact-action.git"
+        "type": "git",
+        "url": "git+ssh://git@github.com:roy-ca/register-artifact-action.git"
     },
     "keywords": [
-      "devops",
-      "servicenow",
-      "register",
-      "artifact"
+        "devops",
+        "servicenow",
+        "register",
+        "artifact"
     ],
     "author": "roy-ca",
     "license": "ISC",
     "bugs": {
-      "url": "https://github.com/roy-ca/register-artifact-action/issues"
+        "url": "https://github.com/roy-ca/register-artifact-action/issues"
     },
     "homepage": "https://github.com/roy-ca/register-artifact-action#readme",
     "dependencies": {
-      "@actions/core": "^1.8.2",
-      "axios": "^0.25.0",
-      "follow-redirects": "^1.15.0"
+        "@actions/core": "^1.8.2",
+        "@octokit/rest": "^19.0.7",
+        "axios": "^0.25.0",
+        "follow-redirects": "^1.15.0"
     }
-  }
-  
+}
