--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "homepage": "https://github.com/roy-ca/register-artifact-action#readme",
     "dependencies": {
         "@actions/core": "^1.8.2",
+        "@actions/github": "^5.1.1",
         "@octokit/rest": "^19.0.7",
         "axios": "^0.25.0",
         "follow-redirects": "^1.15.0"
